<resources>
    <string name="app_name">Terremotos MDV</string>
    <string name="btn_consult_earthquake">Consultar registro</string>
    <string name="intro">El interes por lo terremotos se remonta a más de 3.000 años en la antigua China.\n\n Sin embargo no fue hasta finales del siglo XVII cuando comenzaron a recopilarse datos de manera sistemática por algunos estudiosos.</string>
    <string name="title">TERREMOTOS</string>
    <string name="btn_filter">Filtrar</string>
    <string name="tv_slct_filters">Filtros:</string>
    <string name="tv_consult_title">REGISTRO DE TERREMOTOS</string>
    <string name="et_year">Año</string>
    <string name="btn_clear_dialog">Borrar filtros</string>
    <string name="tv_place_it">● Lugar: %s</string>
    <string name="tv_date_it">● Fecha: %s</string>
    <string name="tv_coordinates_epi_it">● Cord. Epicentro: %1$s</string>
    <string name="tv_deaths_it">● Muertes: %s</string>
    <string name="title_dialog">Filtrar terromotos</string>
    <string name="btn_aceptar">Aceptar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="error_invalid_year">Año no válido</string>
    <string name="confirm_exit">¿Seguro que quieres salir?</string>
    <string name="et_month_d">Mes:</string>
    <string name="et_year_d">Año:</string>
    <string name="et_country_d">País:</string>
    <string name="no_coincidences">No se encontraron coincidencias</string>
</resources>