<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNameEarthquake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Terremoto y maremoto de Japón de 2011"
            android:textSize="@dimen/text_size_title_rv"
            android:fontFamily="@font/lato_bold"/>

        <TextView
            android:id="@+id/tvMagnitudeEarthquake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_item"
            android:layout_weight="0"
            android:text="9.5"
            android:textSize="@dimen/text_size_title_mg_rv"
            android:textColor="@color/purple_500"
            android:fontFamily="@font/lato_bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_item"
        android:layout_marginLeft="@dimen/margin_ll"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_place_it"
            android:textSize="@dimen/text_size"
            android:fontFamily="@font/lato"/>

        <TextView
            android:id="@+id/tvDateEarthquake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_date_it"
            android:textSize="@dimen/text_size"
            android:fontFamily="@font/lato"/>

        <TextView
            android:id="@+id/tvCoordinatesEpi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_coordinates_epi_it"
            android:textSize="@dimen/text_size"
            android:fontFamily="@font/lato"/>

        <TextView
            android:id="@+id/tvDeaths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_deaths_it"
            android:textSize="@dimen/text_size"
            android:fontFamily="@font/lato"/>

    </LinearLayout>

</LinearLayout>